--- a/about.html
+++ b/about.html
@@ -12,14 +12,14 @@
     }
     body {
       /* Margin bottom by footer height */
-      margin-bottom: 60px;
+      margin-bottom: 30px;
     }
     .footer {
       position: absolute;
       bottom: 0;
       width: 100%;
       /* Set the fixed height of the footer here */
-      height: 60px;
+      height: 30px;
     }</style>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
@@ -93,8 +93,10 @@
         </div>
       </div>  
     </div>  
-    <footer class="py-3 mt-5" style="background-color: black;padding-bottom: 10px">
-        <p style="text-align: center;color:white">Copyright &copy; NFU</p>
+    <footer class="footer navbar-fixed-bottom" style="background-color: black">
+        <div class="container" style="text-align: center;color:white">
+          Copyright &copy; NFU
+        </div>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
