--- a/contact.html
+++ b/contact.html
@@ -12,14 +12,14 @@
     }
     body {
       /* Margin bottom by footer height */
-      margin-bottom: 60px;
+      margin-bottom: 30px;
     }
     .footer {
       position: absolute;
       bottom: 0;
       width: 100%;
       /* Set the fixed height of the footer here */
-      height: 60px;
+      height: 30px;
       background-color: black;
     }</style>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -96,7 +96,7 @@
                         <button type="submit" class="btn btn-primary mb-4">傳送</button>
                       </form>
                     </div>
-                    <div class="col-lg-4 mt-4 ml-4" style="font-size: 20px;font-family:Microsoft JhengHei;">
+                    <div class="col-lg-4 my-4 ml-4" style="font-size: 20px;font-family:Microsoft JhengHei;">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1167.448213016631!2d120.42962333284956!3d23.702020723715524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346eba072ee22f11%3A0x558aed05907207d7!2z5ZyL56uL6JmO5bC-56eR5oqA5aSn5a24!5e0!3m2!1szh-TW!2stw!4v1578236071733!5m2!1szh-TW!2stw" class="img-fluid" frameborder="0" style="border:0;padding-right: 20px" allowfullscreen=""></iframe>
                         <br>
                         <p>地址:<br>雲林縣虎尾鎮文化路64號</p>
@@ -110,8 +110,10 @@
             </div>
       </div>  
     </div>  
-    <footer class="py-3 mt-5" style="background-color: black">
-      <p style="text-align: center;color:white">Copyright &copy; NFU</p>
+    <footer class="footer navbar-fixed-bottom" style="background-color: black">
+        <div class="container" style="text-align: center;color:white">
+          Copyright &copy; NFU
+        </div>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
